[metadata]
name = qwertyenv
version = attr: qwertyenv.__version__
author = Oren Zeev-Ben-Mordehai
author_email = your@email.address
url = https://github.com/zbenmo/qwertyenv
description = Gym environments (Reinforcement Learning)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Gym, Gym environments, Black Jack, Reinforcement Learning
license = BSD 3-Clause License
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    gym >= 0.26.2, <= 0.27

[options.extras_require]
examples =
    jupyterlab
    matplotlib

[options.package_data]
* = README.md