[metadata]
name = qwertyenv
version = attr: qwertyenv.__version__
author = Oren Zeev-Ben-Mordehai
author_email = zbenmo@gmail.com
url = https://github.com/zbenmo/qwertyenv
description = Gym and PettingZoo environments (Reinforcement Learning)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Gym, Gym environments, Black Jack, Collect Coins (Chesss like), Reinforcement Learning, Gym Wrappers, PettingZoo, MARL, Gymnasium
license = BSD 3-Clause License
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    gymnasium >= 0.28.1, < 0.29
    pettingzoo >= 1.22.3, < 1.23

[options.extras_require]
examples =
    jupyterlab
    matplotlib
    stable_baselines3[extra] >= 2.0.0a5, < 2.1
    ipywidgets
    tianshou >= 0.5, < 0.6
tests =
    pytest
    pettingzoo[butterfly] >= 1.22.3, < 1.23

[options.package_data]
* = README.md